Bug 1761217 When remote decoder process crashes, track that and reject any following decode requests r=alwu

If remote decoding process crashes IPDLActor is destroyed but we don't have such info in RemoteDecoderChild.
In this patch we store that status in mRemoteDecoderCrashed variable and reject any following decode requests.

Differential Revision: https://phabricator.services.mozilla.com/D141962